--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES2020",
         "jsx": "react",
-        "module": "ESNext",
+        "module": "esnext",
         "moduleResolution": "bundler",
         "strict": true,
         "declaration": true,
@@ -10,7 +10,8 @@
     },
     "include": [
         "src/**/*",
-        "pulse.config.ts", "preview/index.tsx",
+        "pulse.config.ts",
+        "preview/index.tsx",
     ],
     "exclude": [
         "node_modules",
