Add backend preview

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "include": [
         "src/**/*",
         "pulse.config.ts",
-        "preview/index.tsx",
+        "preview/frontend/index.tsx",
     ],
     "exclude": [
         "node_modules",
