--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "pulse_editor_extension_template",
-  "displayName": "Pulse Extension Template",
-  "description": "A template for creating Pulse extensions",
+  "name": "pulse_app_template",
+  "displayName": "Pulse App Template",
+  "description": "A template for creating Pulse App",
   "version": "0.0.1",
   "private": true,
-  "type": "module",
   "pulse-editor-marketplace": {
     "visibility": "unlisted"
   },
@@ -13,15 +12,17 @@
     "dev": "npm run clean && cross-env NODE_OPTIONS='--import=tsx' concurrently --prefix none \"webpack --mode development --watch\" \"tsx watch --clear-screen=false express.ts\"",
     "build": "npm run clean && cross-env NODE_OPTIONS='--import=tsx' webpack --mode production",
     "start": "cross-env NODE_OPTIONS='--import=tsx' tsx express.ts",
-    "preview": "cross-env NODE_OPTIONS='--import=tsx' PREVIEW=true webpack serve --mode development",
+    "preview": "npm run clean && cross-env NODE_OPTIONS='--import=tsx' PREVIEW=true concurrently --prefix none \"webpack --mode development --watch\" \"tsx watch --clear-screen=false express.ts\"",
     "clean": "rimraf dist"
   },
   "dependencies": {
     "@module-federation/enhanced": "^0.18.3",
     "@module-federation/node": "^2.7.14",
+    "@module-federation/runtime": "^0.18.3",
     "@pulse-editor/react-api": "^0.1.1-alpha.24",
     "@pulse-editor/shared-utils": "^0.1.1-alpha.24",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "html-webpack-plugin": "^5.6.4",
     "react": "^19.1.1",
@@ -32,10 +33,12 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "concurrently": "^9.2.1",
+    "connect-livereload": "^0.6.1",
     "cross-env": "^10.0.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.33.0",
     "eslint-plugin-react": "^7.37.5",
+    "livereload": "^0.10.3",
     "mini-css-extract-plugin": "^2.9.4",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
