--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "dev": "npm run clean && cross-env NODE_OPTIONS='--import=tsx' concurrently --prefix none \"webpack --mode development --watch\" \"tsx watch --clear-screen=false express.ts\"",
+    "dev": "npm run clean && cross-env NODE_OPTIONS='--import=tsx' NODE_ENV=development concurrently --prefix none \"webpack --mode development --watch\" \"tsx watch --clear-screen=false express.ts\"",
     "build": "npm run clean && cross-env NODE_OPTIONS='--import=tsx' webpack --mode production",
     "start": "cross-env NODE_OPTIONS='--import=tsx' tsx express.ts",
     "preview": "npm run clean && cross-env NODE_OPTIONS='--import=tsx' PREVIEW=true concurrently --prefix none \"webpack --mode development --watch\" \"tsx watch --clear-screen=false express.ts\"",
@@ -35,6 +35,7 @@
     "@types/react-dom": "^19.1.8",
     "concurrently": "^9.2.1",
     "connect-livereload": "^0.6.1",
+    "copy-webpack-plugin": "^13.0.1",
     "cross-env": "^10.0.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.34.0",
