--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@pulse-editor/react-api": "^0.1.1-beta.55",
-    "@pulse-editor/shared-utils": "^0.1.1-beta.55",
+    "@pulse-editor/react-api": "0.1.1-beta.56",
+    "@pulse-editor/shared-utils": "0.1.1-beta.56",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
