--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@module-federation/enhanced": "0.19.1",
+    "@module-federation/node": "2.7.17",
+    "@module-federation/runtime": "0.19.1",
+    "@pulse-editor/cli": "file://../pulse-editor/npm-packages/cli",
     "@pulse-editor/react-api": "^0.1.1-beta.59",
     "@pulse-editor/shared-utils": "^0.1.1-beta.59",
     "cors": "^2.8.5",
@@ -26,9 +30,6 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@module-federation/enhanced": "0.19.1",
-    "@module-federation/node": "2.7.17",
-    "@module-federation/runtime": "0.19.1",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/cors": "^2.8.19",
     "@types/react": "19.2.2",
