--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "moduleResolution": "bundler",
         "strict": true,
         "declaration": true,
-        "outDir": "dist",
+        "outDir": "dist"
     },
     "include": [
         "src/**/*",
